--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js",
-    "start": "node ./index.js",
-    "build": "next build"
+    "start": "node ./index.js"
   },
   "author": "Felipe Baranovsky",
   "license": "ISC",
